feat: login, registration, getuser, using jwt

--- a/src/views/form.pug
+++ b/src/views/form.pug
@@ -17,8 +17,8 @@ html(lang="en")
 
     if mainPage 
       .main 
-        a(href="/signup") SIGN UP 
-        a(href="/signin") SIGN IN 
+        a(href="main/signup") SIGN UP 
+        a(href="main/signin") SIGN IN 
     else 
       .main
         form.form(action="/send-data" method="post")
